--- a/package.json
+++ b/package.json
@@ -29,15 +29,18 @@
     "url": "https://github.com/senecajs/seneca-entity.git"
   },
   "scripts": {
-    "test": "lab -v -P test -L -t 80",
-    "test-html": "lab -v -P test -L -t 80 -r html > testcov.html",
-    "lint": "lab -P test -dL"
+    "test": "lab -v -L -t 80",
+    "test-html": "lab -v -L -t 80 -r html > testcov.html",
+    "lint": "lab -dL"
   },
   "devDependencies": {
+    "async": "1.5.2",
     "code": "1.5.0",
     "eslint-config-seneca": "1.1.2",
     "eslint-plugin-standard": "1.3.1",
+    "gex": "0.2.2",
     "joi": "6.10.x",
-    "lab": "6.2.x"
+    "lab": "6.2.x",
+    "seneca": "https://github.com/senecajs/seneca.git"
   }
 }
