--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: node_js
 sudo: false
+
+env:
+  - SENECA_VER=@1.4.0
+  - SENECA_VER=@2.0.x
+
 node_js:
-  - 0.10
-  - 0.12
-  - 4
-  - 5
+  - '0.10'
+  - '0.12'
+  - '4'
+  - '5'
+
+before_script:
+  - npm install seneca$SENECA_VER
