--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "description": "Entity plugin for seneca",
   "keywords": [
     "seneca",
+    "entity",
     "plugin"
   ],
   "version": "0.1.1",
   "license": "MIT",
   "homepage": "http://senecajs.org",
   "author": "Richard Rodger (http://richardrodger.com/)",
-  "dependencies": {
-    "eraro": "0.4.1",
-    "jsonic": "0.2.2",
-    "lodash": "4.0.1"
-  },
   "main": "entity.js",
   "engines": {
     "node": ">=0.10.0"
@@ -35,9 +31,16 @@
     "coverage": "lab test -v -r lcov | coveralls",
     "lint": "lab -dL"
   },
+  "dependencies": {
+    "eraro": "0.4.1",
+    "jsonic": "0.2.2",
+    "lodash": "4.0.1",
+    "seneca-mem-store": "^0.5.0"
+  },
   "devDependencies": {
     "async": "1.5.2",
     "code": "1.5.0",
+    "eslint-plugin-hapi": "4.x.x",
     "eslint-config-seneca": "1.1.2",
     "eslint-plugin-standard": "1.3.1",
     "gex": "0.2.2",
