--- a/package.json
+++ b/package.json
@@ -34,19 +34,23 @@
   "dependencies": {
     "eraro": "0.4.1",
     "jsonic": "0.2.2",
-    "lodash": "4.0.1",
-    "seneca-mem-store": "^0.5.0"
+    "lodash": "4.14.2",
+    "seneca-mem-store": "0.5.1"
   },
   "devDependencies": {
-    "async": "1.5.2",
-    "code": "1.5.0",
+    "async": "2.0.1",
+    "code": "3.0.2",
+    "coveralls": "2.11.x",
+    "eslint-config-seneca": "3.x.x",
     "eslint-plugin-hapi": "4.x.x",
-    "eslint-config-seneca": "1.1.2",
-    "eslint-plugin-standard": "1.3.1",
+    "eslint-plugin-standard": "2.x.x",
     "gex": "0.2.2",
-    "joi": "6.10.x",
-    "lab": "6.2.x",
-    "seneca": "plugin",
-    "coveralls": "2.11.x"
-  }
+    "joi": "9.0.x",
+    "lab": "10.9.x",
+    "pre-commit": "1.1.3",
+    "seneca": "plugin"
+  },
+  "pre-commit": [
+    "test"
+  ]
 }
