--- a/package.json
+++ b/package.json
@@ -38,19 +38,20 @@
     "seneca-mem-store": "0.5.1"
   },
   "devDependencies": {
-    "async": "2.0.1",
-    "code": "3.0.2",
+    "async": "2.0.x",
+    "code": "3.0.x",
     "coveralls": "2.11.x",
     "eslint-config-seneca": "3.x.x",
     "eslint-plugin-hapi": "4.x.x",
     "eslint-plugin-standard": "2.x.x",
     "gex": "0.2.2",
     "joi": "9.0.x",
-    "lab": "10.9.x",
+    "lab": "11.0.x",
     "pre-commit": "1.1.3",
     "seneca": "plugin"
   },
   "pre-commit": [
-    "test"
+    "test",
+    "lint"
   ]
 }
