Updated scripts, added create-a-release.md, passed on seneca 3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ node_js:
 before_script:
   - npm uninstall seneca
   - npm install seneca$SENECA_VER
-  
+
 after_script:
-  - npm run coverage
+  - npm run coveralls
