--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "url": "https://github.com/senecajs/seneca-entity.git"
   },
   "scripts": {
-    "test": "lab -v -L -t 74 $LAB_FLAGS",
-    "test:node6": "LAB_FLAGS='--leaks' && npm test",
-    "test-html": "lab -v -L -t 80 -r html > testcov.html",
-    "coverage": "lab test -v -r lcov | coveralls",
-    "lint": "lab -dL"
+   "test": "lab -v -L -t 74 $LAB_FLAGS",
+   "test:node6": "LAB_FLAGS='--leaks' && npm test",
+   "test-html": "lab -v -L -t 80 -r html > testcov.html",
+   "coveralls": "lab -s -P test -r lcov | coveralls",
+   "coverage": "lab -v -P test -L -t 80 -r html > coverage.html",
+   "annotate": "docco entity.js lib/*.js -o docs/annotated"
   },
   "dependencies": {
     "eraro": "0.4.1",
@@ -46,6 +47,7 @@
     "eslint-plugin-standard": "2.x.x",
     "gex": "0.2.2",
     "joi": "9.0.x",
+    "pre-commit": "1.1.x",
     "lab": "11.0.x",
     "pre-commit": "1.1.3",
     "seneca": "plugin"
