--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "pre-commit": "1.1.x",
     "lab": "11.0.x",
     "pre-commit": "1.1.3",
-    "seneca": "plugin"
+    "seneca": "plugin",
+    "seneca-basic": "0.4.x"
   },
   "pre-commit": [
     "test"
