--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eraro": "0.4.1",
     "jsonic": "0.2.2",
     "lodash": "4.15.0",
+    "nid": "0.3.2",
     "seneca-mem-store": "0.6.0"
   },
   "devDependencies": {
