--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "entity",
     "plugin"
   ],
-  "version": "1.3.0",
+  "version": "2.0.0",
   "license": "MIT",
   "homepage": "http://senecajs.org",
   "author": "Richard Rodger (http://richardrodger.com/)",
@@ -45,7 +45,7 @@
     "jsonic": "0.2.2",
     "lodash": "4.15.0",
     "nid": "0.3.2",
-    "seneca-mem-store": "0.6.0"
+    "seneca-mem-store": "1.0.0"
   },
   "devDependencies": {
     "async": "2.0.x",
@@ -58,8 +58,7 @@
     "joi": "9.0.x",
     "pre-commit": "1.1.x",
     "lab": "11.0.x",
-    "seneca": "plugin",
-    "seneca-basic": "0.5.x"
+    "seneca": "plugin"
   },
   "pre-commit": [
     "test"
