lab fix for node 8

--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "url": "https://github.com/senecajs/seneca-entity.git"
   },
   "scripts": {
-    "test": "lab -v -L -t 74",
-    "test-html": "lab -v -L -t 74 -r html > testcov.html",
-    "coveralls": "lab -s -P test -r lcov | coveralls",
-    "coverage": "lab -v -P test -L -t 74 -r html > docs/coverage.html",
+    "test": "lab -v -L -t 74 -I WebAssembly",
+    "test-html": "lab -v -L -t 74 -r html -I WebAssembly > testcov.html",
+    "coveralls": "lab -s -P test -r lcov -I WebAssembly | coveralls",
+    "coverage": "lab -v -P test -L -t 74 -r html -I WebAssembly > docs/coverage.html",
     "annotate": "docco entity.js lib/*.js -o docs/annotated"
   },
   "dependencies": {
@@ -58,7 +58,7 @@
     "joi": "9.0.x",
     "pre-commit": "1.1.x",
     "lab": "11.0.x",
-    "seneca": "plugin"
+    "seneca": "git:github.com/rjrodger/seneca"
   },
   "pre-commit": [
     "test"
