--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "main": "entity.js",
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=4"
   },
   "files": [
     "LICENSE",
@@ -46,23 +46,16 @@
     "jsonic": "0.3.0",
     "lodash": "4.17.4",
     "nid": "0.3.2",
-    "seneca-mem-store": "1.0.0"
+    "seneca-mem-store": "1.0.1"
   },
   "devDependencies": {
-    "async": "2.4.x",
-    "code": "4.0.x",
-    "coveralls": "2.13.x",
-    "eslint-config-seneca": "3.x.x",
-    "eslint-plugin-hapi": "4.x.x",
-    "eslint-plugin-standard": "3.x.x",
-    "gex": "0.2.2",
-    "joi": "10.5.x",
-    "lab": "13.1.x",
-    "pre-commit": "1.2.x",
-    "prettier": "^1.8.2",
+    "async": "2",
+    "code": "4",
+    "coveralls": "2",
+    "gex": "0",
+    "joi": "12",
+    "lab": "14",
+    "prettier": "1",
     "seneca": "plugin"
-  },
-  "pre-commit": [
-    "test"
-  ]
+  }
 }
