--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,27 @@ language: node_js
 sudo: false
 
 env:
-  - SENECA_VER=seneca@2.x.x
   - SENECA_VER=seneca@3.x.x
   - SENECA_VER=seneca@plugin
   - SENECA_VER=senecajs/seneca
 
 node_js:
+  - '10'
   - '8'
   - '6'
   - '4'
 
+install:
+  - if [ ${NODE_VERSION:1:2} -ge 10 ]; then npm i -g npm@6; npm ci; else npm install; fi
 
 before_script:
   - npm uninstall seneca
   - npm install $SENECA_VER
+  - NODE_VERSION=$(node -v)
+
+script:
+  - npm test
+  - if [ ${NODE_VERSION:1:2} -ge 10 ]; then npm audit; fi
 
 after_script:
   - npm run coveralls
