--- a/package.json
+++ b/package.json
@@ -37,14 +37,17 @@
     "test": "lab -v -t 70 -I URL,URLSearchParams,BigUint64Array,BigInt64Array,BigInt",
     "coveralls": "lab -s -P test -r lcov -I URL,URLSearchParams | coveralls",
     "coverage": "lab -v -P test -t 70 -r html -I URL,URLSearchParams > coverage.html",
-    "prettier": "prettier --write --no-semi --single-quote entity.js lib/*.js test/*.js"
+    "prettier": "prettier --write --no-semi --single-quote entity.js lib/*.js test/*.js",
+    "clean-npm": "rm -rf node_modules package-lock.json",
+    "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"`; echo TAG: v$REPO_VERSION; git commit -a -m v$REPO_VERSION; git tag v$REPO_VERSION; git push --tags;",
+    "repo-publish": "npm run repo-tag; npm publish --access public"
   },
   "dependencies": {
-    "eraro": "1.0",
-    "jsonic": "0.3",
-    "lodash": "4.17",
-    "nid": "0.3",
-    "seneca-mem-store": "1.2"
+    "eraro": "1",
+    "jsonic": "0",
+    "lodash": "4",
+    "nid": "0",
+    "seneca-mem-store": "1"
   },
   "devDependencies": {
     "async": "2",
