--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "prettier": "prettier --write --no-semi --single-quote entity.js lib/*.js test/*.js",
     "clean-npm": "rm -rf node_modules package-lock.json",
     "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
-    "repo-publish": "npm test && npm run repo-tag && npm publish --access public"
+    "repo-publish": "npm run prettier && npm test && npm run repo-tag && npm publish --access public"
   },
   "dependencies": {
     "eraro": "1",
