--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "joi": "^14.3.1",
     "lab": "^18.0.2",
     "prettier": "^1.16.4",
-    "seneca": "plugin"
+    "seneca": "plugin",
+    "seneca-plugin-validator": "0.0.1"
   }
 }
