--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "coveralls": "^3.0.3",
     "gex": "^0.3.0",
     "joi": "^14.3.1",
-    "lab": "^18.0.2",
-    "prettier": "^1.16.4",
+    "@hapi/lab": "^18.1.2",
+    "prettier": "^1.17.1",
     "seneca": "plugin",
     "seneca-plugin-validator": "0.0.1"
   }
