--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "entity",
     "plugin"
   ],
-  "version": "5.0.0",
+  "version": "5.1.0",
   "license": "MIT",
   "homepage": "http://senecajs.org",
   "author": "Richard Rodger (http://richardrodger.com/)",
@@ -48,11 +48,11 @@
   },
   "devDependencies": {
     "@hapi/code": "^6.0.0",
+    "@hapi/joi": "^15.1.1",
     "@hapi/lab": "^20.2.2",
     "async": "^3.1.0",
     "coveralls": "^3.0.6",
     "gex": "^0.3.0",
-    "joi": "^14.3.1",
     "prettier": "^1.18.2",
     "seneca": "plugin",
     "seneca-plugin-validator": "0.3.0"
