--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "entity",
     "plugin"
   ],
-  "version": "5.1.2",
+  "version": "5.2.0",
   "license": "MIT",
   "homepage": "http://senecajs.org",
   "author": "Richard Rodger (http://richardrodger.com/)",
@@ -38,7 +38,7 @@
     "api-docs": "doxdox '*/**/*.js' --layout markdown --output API.md",
     "clean-npm": "rm -rf node_modules package-lock.json",
     "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
-    "repo-publish": "npm run prettier && npm test && npm run repo-tag && npm publish --access public --registry=http://registry.npmjs.org"
+    "repo-publish": "npm run clean-npm && npm i --registry=http://registry.npmjs.org && npm run prettier && npm test && npm run repo-tag && npm publish --access public --registry=http://registry.npmjs.org"
   },
   "dependencies": {
     "eraro": "^1.1.0",
@@ -49,12 +49,12 @@
   "devDependencies": {
     "@hapi/code": "^6.0.0",
     "@hapi/joi": "^15.1.1",
-    "@hapi/lab": "^20.2.2",
+    "@hapi/lab": "^20.3.2",
     "async": "^3.1.0",
     "coveralls": "^3.0.6",
     "gex": "^0.3.0",
     "prettier": "^1.18.2",
-    "seneca": "plugin",
+    "seneca": "^3.16.1",
     "seneca-plugin-validator": "0.3.0"
   }
 }
