deps; deepscan; travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: node_js
-sudo: false
 
 env:
   - SENECA_VER=seneca@3.x.x
@@ -7,13 +6,10 @@ env:
   - SENECA_VER=senecajs/seneca
 
 node_js:
+  - '14'
   - '13'
   - '12'
   - '10'
-  - '8'
-
-install:
-  - NODE_VERSION=$(node -v); if [ ${NODE_VERSION:1:2} -ge 10 ]; then npm i -g npm@6; npm ci; else npm install; fi
 
 before_script:
   - npm uninstall seneca
@@ -21,7 +17,7 @@ before_script:
 
 script:
   - npm test
-  - if [ ${NODE_VERSION:1:2} -ge 10 ]; then npm audit; fi
+  - npm audit
 
 after_script:
   - npm run coveralls
