--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "entity",
     "plugin"
   ],
-  "version": "9.0.0",
+  "version": "9.0.1",
   "license": "MIT",
   "homepage": "http://senecajs.org",
   "author": "Richard Rodger (http://richardrodger.com/)",
@@ -43,6 +43,8 @@
   },
   "dependencies": {
     "eraro": "^2.1.0",
+    "jsonic": "^0.3.1",
+    "nid": "^1.1.0",
     "seneca-mem-store": "^2.1.0"
   },
   "devDependencies": {
