--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "entity",
     "plugin"
   ],
-  "version": "9.0.1",
+  "version": "10.0.0",
   "license": "MIT",
   "homepage": "http://senecajs.org",
   "author": "Richard Rodger (http://richardrodger.com/)",
@@ -55,7 +55,7 @@
     "coveralls": "^3.1.0",
     "prettier": "^2.0.5",
     "seneca": "^3.21.2",
-    "seneca-plugin-validator": "0.6.1",
+    "seneca-plugin-validator": "^0.6.1",
     "seneca-promisify": "^2.0.0"
   }
 }
