--- a/package.json
+++ b/package.json
@@ -46,16 +46,17 @@
     "eraro": "^2.1.0",
     "jsonic": "^1.0.1",
     "nid": "^1.3.3",
-    "seneca-mem-store": "^3.0.1"
+    "seneca-mem-store": "^4.0.1"
   },
   "devDependencies": {
     "@hapi/code": "^8.0.2",
     "@hapi/joi": "^17.1.1",
-    "@hapi/lab": "^24.0.0",
+    "@hapi/lab": "^24.1.0",
     "async": "^3.2.0",
     "coveralls": "^3.1.0",
-    "prettier": "^2.1.2",
-    "seneca": "^3.22.0",
+    "gex": "^3.0.1",
+    "prettier": "^2.2.1",
+    "seneca": "^3.23.0",
     "seneca-plugin-validator": "^0.6.1",
     "seneca-promisify": "^2.0.0"
   }
