--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "scripts": {
     "test": "lab -v -P test -L -t 80 -r console -o stdout -r html -o test/coverage.html",
+    "test-some": "lab -v -P test -L -g",
     "coveralls": "lab -s -P test -r lcov | coveralls",
     "coverage": "lab -v -P test -t 80 -r html -I URL,URLSearchParams > coverage.html",
     "prettier": "prettier --write --no-semi --single-quote entity.js lib/*.js test/*.js",
@@ -46,16 +47,16 @@
     "eraro": "^2.1.0",
     "jsonic": "^1.0.1",
     "nid": "^1.3.3",
-    "seneca-mem-store": "^5.0.0"
+    "seneca-mem-store": "^6.0.3"
   },
   "devDependencies": {
     "@hapi/code": "^8.0.3",
     "@hapi/joi": "^17.1.1",
-    "@hapi/lab": "^24.2.1",
-    "async": "^3.2.0",
-    "coveralls": "^3.1.0",
+    "@hapi/lab": "^24.3.2",
+    "async": "^3.2.1",
+    "coveralls": "^3.1.1",
     "gex": "^3.1.0",
-    "prettier": "^2.3.0",
+    "prettier": "^2.4.0",
     "seneca": "^3.23.3",
     "seneca-plugin-validator": "^0.6.1",
     "seneca-promisify": "^2.0.0"
