--- a/package.json
+++ b/package.json
@@ -46,19 +46,21 @@
   "dependencies": {
     "eraro": "^2.1.0",
     "jsonic": "^1.0.1",
-    "nid": "^1.3.3",
-    "seneca-mem-store": "^6.2.0"
+    "nid": "^1.3.3"
+  },
+  "peerDependencies": {
+    "seneca": ">=3",
+    "seneca-mem-store": ">=6",
+    "seneca-promisify": ">=2"
   },
   "devDependencies": {
-    "@hapi/code": "^8.0.5",
+    "@hapi/code": "^8.0.7",
     "@hapi/joi": "^17.1.1",
-    "@hapi/lab": "^24.4.0",
-    "async": "^3.2.2",
+    "@hapi/lab": "^24.6.0",
+    "async": "^3.2.3",
     "coveralls": "^3.1.1",
     "gex": "^3.1.0",
-    "prettier": "^2.5.0",
-    "seneca": "^3.25.0",
-    "seneca-plugin-validator": "^0.6.1",
-    "seneca-promisify": "^2.0.0"
+    "prettier": "^2.6.2",
+    "seneca-plugin-validator": "^0.6.1"
   }
 }
