--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "entity",
     "plugin"
   ],
-  "version": "16.3.0",
+  "version": "16.4.0",
   "license": "MIT",
   "homepage": "http://senecajs.org",
   "author": "Richard Rodger (http://richardrodger.com/)",
@@ -46,11 +46,11 @@
   "dependencies": {
     "eraro": "^2.1.0",
     "jsonic": "^1.0.1",
-    "nid": "^1.3.3"
+    "nid": "^1.3.3",
+    "seneca-mem-store": "^6.3.1"
   },
   "peerDependencies": {
     "seneca": ">=3",
-    "seneca-mem-store": ">=6",
     "seneca-promisify": ">=2"
   },
   "devDependencies": {
