--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "scripts": {
     "test": "lab -v -P test -L -t 80 -r console -o stdout -r html -o test/coverage.html",
     "test-some": "lab -v -P test -L -g",
-    "coveralls": "lab -s -P test -r lcov | coveralls",
     "coverage": "lab -v -P test -t 80 -r html -I URL,URLSearchParams > coverage.html",
     "prettier": "prettier --write --no-semi --single-quote entity.js lib/*.js test/*.js",
     "api-docs": "doxdox '*/**/*.js' --layout markdown --output API.md",
@@ -44,9 +43,6 @@
     "repo-publish-quick": "npm run prettier && npm test && npm run repo-tag && npm publish --access public --registry=https://registry.npmjs.org"
   },
   "dependencies": {
-    "eraro": "^2.1.0",
-    "jsonic": "^1.0.1",
-    "nid": "^2.0.0",
     "seneca-mem-store": "^6.3.1"
   },
   "peerDependencies": {
@@ -55,12 +51,8 @@
   },
   "devDependencies": {
     "@hapi/code": "^9.0.1",
-    "@hapi/joi": "^17.1.1",
     "@hapi/lab": "^25.0.1",
-    "async": "^3.2.4",
-    "coveralls": "^3.1.1",
     "gex": "^3.1.0",
-    "prettier": "^2.7.1",
-    "seneca-plugin-validator": "^0.6.1"
+    "prettier": "^2.7.1"
   }
 }
