--- a/package.json
+++ b/package.json
@@ -52,7 +52,13 @@
   "devDependencies": {
     "@hapi/code": "^9.0.1",
     "@hapi/lab": "^25.0.1",
-    "gex": "^3.1.0",
-    "prettier": "^2.7.1"
+    "@seneca/maintain": "^0.0.22",
+    "@types/jest": "^27.5.1",
+    "esbuild": "^0.14.39",
+    "esbuild-jest": "^0.5.0",
+    "jest": "^28.1.0",
+    "prettier": "^2.7.1",
+    "seneca-msg-test": "^3.4.0",
+    "typescript": "^4.6.4"
   }
 }
