--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seneca-entity",
   "main": "dist/entity.js",
-  "version": "16.4.0",
+  "version": "17.0.0",
   "type": "commonjs",
   "types": "dist/gateway.d.ts",
   "description": "Entity plugin for seneca",
@@ -39,7 +39,7 @@
     "test-watch": "jest --coverage --watchAll",
     "watch": "tsc -w -d",
     "build": "tsc -d",
-    "prettier": "prettier --write --no-semi --single-quote *.ts lib/*.ts test/*.js",
+    "prettier": "prettier --write --no-semi --single-quote src/**/*.ts test/*.js",
     "reset": "npm run clean && npm i && npm test",
     "clean": "rm -rf node_modules package-lock.json yarn.lock",
     "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
