--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seneca-entity",
   "main": "dist/entity.js",
-  "version": "17.0.1",
+  "version": "17.0.2",
   "type": "commonjs",
   "types": "dist/gateway.d.ts",
   "description": "Entity plugin for seneca",
@@ -25,8 +25,7 @@
   "files": [
     "LICENSE",
     "README.md",
-    "lib",
-    "entity.ts",
+    "src",
     "dist"
   ],
   "repository": {
