--- a/package.json
+++ b/package.json
@@ -52,18 +52,15 @@
   "dependencies": {
     "seneca-mem-store": "^8.4.0"
   },
-  "peerDependencies": {
-    "seneca": ">=3",
-    "seneca-promisify": ">=3"
-  },
   "devDependencies": {
+    "seneca": "github:senecajs/seneca#v4.0.0-rc2",
     "@seneca/maintain": "^0.1.0",
-    "@types/jest": "^29.5.11",
-    "esbuild": "^0.19.11",
+    "@types/jest": "^29.5.12",
+    "esbuild": "^0.21.5",
     "esbuild-jest": "^0.5.0",
     "jest": "^29.7.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.3.1",
     "seneca-msg-test": "^4.1.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   }
 }
