--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: [lts/*, 17.x, 16.x, 14.x, 12.x]
+        node-version: [22.x, 20.x, 18.x, 16.x]
 
     runs-on: ${{ matrix.os }} 
         
