--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seneca-entity",
   "main": "dist/entity.js",
-  "version": "26.0.1",
+  "version": "26.0.2",
   "type": "commonjs",
   "types": "dist/entity.d.ts",
   "description": "Entity plugin for seneca",
@@ -50,10 +50,10 @@
     "node": ">=16"
   },
   "dependencies": {
-    "seneca-mem-store": "^8.4.0"
+    "seneca-mem-store": "^9.0.0"
   },
   "peerDependencies": {
-    "seneca": ">=3",
+    "seneca": ">=3||>=4.0.0-rc2",
     "seneca-promisify": ">=3"
   },
   "devDependencies": {
