--- a/package.json
+++ b/package.json
@@ -59,11 +59,14 @@
   "devDependencies": {
     "@seneca/maintain": "^0.1.0",
     "@types/jest": "^29.5.12",
-    "esbuild": "^0.21.5",
+    "esbuild": "^0.23.0",
     "esbuild-jest": "^0.5.0",
     "jest": "^29.7.0",
-    "prettier": "^3.3.1",
+    "prettier": "^3.3.2",
     "seneca-msg-test": "^4.1.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.3"
+  },
+  "overrides": {
+    "gubu":"8.0.2"
   }
 }
